adding [com.taoensso/timbre 4.10.0] for java9